--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "emotion-theming": "^11.0.0",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -48,9 +55,14 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.3.7",
     "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-docs": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-knobs": "^6.3.0",
     "@storybook/addon-links": "^6.3.6",
+    "@storybook/addon-viewport": "^6.3.7",
     "@storybook/node-logger": "^6.3.6",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.6"
